changes in the sendemail function